# StoryPromptAnalyzer

./: .env.example  .gitignore  LICENSE  PRESENTATION.md  PRESENTATION_SLIDES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
knowledge-base/: README.md
knowledge-base/architecture/: dependency-map.md
knowledge-base/by-ruleflow/: COMO_USAR.md  CssIfCrewLegalityRuleFlow.md  CssIfCrewPayRuleFlow.md  CssIfTripLegalityRuleFlow.md  CssIfTripPayRuleFlow.md  CssIfTripPaySubFlow.md  DEPENDENCIAS.md  README.md  function-index.md
knowledge-base/functions/: fcn.md  fcnAddQualificationToResult.md  fcnAddToAllLegs.md  fcnAddToBaseOfPayBucket.md  fcnAddToDutyPeriodSumOfLegPremimum.md  fcnAddToPayValueOfPayBucket.md  fcnAddToWorkingDaysBlockArray.md  fcnAddTripPayBuckets.md  fcnAdjustPremiumTripAndDutyPeriodPay.md  fcnAdjustTripAndDutyPeriodPayForEDDLeg.md  fcnAdjustTripAndDutyPeriodPayForLDLeg.md  fcnAllDutiesInTripAssociatedWithReserveBlockDuties.md  fcnAllDutiesInTripThisMonthHaveRapAssociations.md  fcnAllLabelsInWindow.md  fcnAnyLegCountryMatchesAnyDeniedQualification.md  fcnAnyLegMatchesDeniedPRIQualification.md  fcnApplyStaffBankAdjustments.md  fcnAreAllDutyPeriodsWithinReportDateRange.md  fcnAssembleTripLegalityReturnValues.md  fcnAssignAssignment.md  fcnAssignDP.md  fcnAssignDutyPeriodNoPremium.md  (+519 more)
src/: __init__.py  ai_analyzer.py  export_utils.py  gui.py  i18n.py  jira_client.py  jira_formatter.py  knowledge_base_search.py  main.py  rich_text_viewer.py  settings_window.py
tests/: test_ai_analyzer.py  test_jira_client.py  test_main.py
(+6 files in other folders)
